Fixed jumping scrollbar issue throughout the app

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@
 .onHover {
   cursor: pointer;
 }
+
+/*fix jumping scrollbar issue*/
+html {
+  overflow-y: scroll;
+}
